# bini-rust-server

./: .gitignore  Cargo.toml  README.md  Readme.md
.github/workflows/: build-binaries.yml
src/: main.rs
