[package]
name    = "bini-rust-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum            = "0.8"
tokio           = { version = "1",    features = ["full"] }
tower-http      = { version = "0.6",  features = [
    "fs",
    "cors",
    "limit",
    "set-header",
    "timeout",
    "compression-full",
] }
reqwest         = { version = "0.13", default-features = false, features = ["rustls", "http2"] }
http-body-util  = "0.1"
serde_json      = "1"
local-ip-address = "0.6"
uuid = { version = "1.23.1", features = ["v4"] }

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"